welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:54: error: value *- is not a member of Int
		recule(nbPas*-1);	
                            ^